fixed navbar not showing all options

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,16 +133,16 @@ nav {
     line-height: 25px;
 
     ul {
-        width: 93%;
+        width: 100%;
         height: 52px;
         overflow: hidden;
         margin: 0 auto;
-        padding: 0 10px;
+        padding: 0;
     }
 
     ul a {
         color: $font-color;
-        font-size: 1.4rem;
+        font-size: 1.16rem;
         text-transform: uppercase;
         font-family: $robotfs;
         font-weight: 400;
